syntax = "proto3";

package account;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

import "phxrpc/rpc/phxrpc.proto";

message User {
    string username = 1;
    uint32 status = 2;
    uint32 createtime = 10;
}

message PwdReq {
    string username = 1;
    string pwd_md5 = 10;
}

service Account {
    rpc Set( User ) returns ( google.protobuf.Empty ) {
        option( phxrpc.CmdID ) = 1;
        option( phxrpc.OptString ) = "u:";
        option( phxrpc.Usage ) = "-u <user>";
    }

    rpc SetPwd( PwdReq ) returns ( google.protobuf.Empty ) {
        option( phxrpc.CmdID ) = 2;
        option( phxrpc.OptString ) = "u:p:";
        option( phxrpc.Usage ) = "-u <user> -p <pwd_md5>";
    }

    rpc Get( google.protobuf.StringValue ) returns ( User ) {
        option( phxrpc.CmdID ) = 3;
        option( phxrpc.OptString ) = "u:";
        option( phxrpc.Usage ) = "-u <user>";
    }

    rpc Auth( PwdReq ) returns ( google.protobuf.Empty ) {
        option( phxrpc.CmdID ) = 4;
        option( phxrpc.OptString ) = "u:p:";
        option( phxrpc.Usage ) = "-u <user> -p <pwd_md5>";
    }
}

